added routes and stuff

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Login</title>
-	<link rel="stylesheet" type="text/css" href="login.css" />
+	<link rel="stylesheet" type="text/css" href="css/login.css" />
 </head>
 <body>
 	<div class="header">
 		<nav>
 			<div class="logo-container">
-				<img src="logo.png" class="logo-img">
+				<img src="asset/logo.png" class="asset/logo-img">
 			</div>
 		</nav>
 	</div>
