--- a/public/html/login.html
+++ b/public/html/login.html
@@ -19,6 +19,7 @@
 				<p class="login-title">Please login</p>
 			</div>
 			<div class="login-body">
+				<div id='msg_container' style="display:none;"></div>
 				<div class="login-form">
 					<div class="form-input">
 						<label for="username">Username:</label>
@@ -31,8 +32,8 @@
 				</div>
 			</div>
 			<div class="login-footer">
-				<a href="#" class="important less">Create Login</a>
-				<a href="#" class="important">Login</a>
+				<a href="#" class="important less" id="create_user">Create Login</a>
+				<a href="#" class="important" id="login">Login</a>
 			</div>
 		</div>
 	</div>
@@ -43,5 +44,6 @@
 			</div>
 		</nav>
 	</div>
+	<script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
