--- a/public/html/login.html
+++ b/public/html/login.html
@@ -40,7 +40,7 @@
 	<div class="footer">
 		<nav>
 			<div class="logo-container">
-				<img src="logo.png" class="logo-img">
+				<img src="asset/logo.png" class="logo-img">
 			</div>
 		</nav>
 	</div>
