allmost works, logging in

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -9,7 +9,7 @@
 	<div class="header">
 		<nav>
 			<div class="logo-container">
-				<img src="asset/logo.png" class="asset/logo-img">
+				<img src="asset/logo.png" class="logo-img">
 			</div>
 		</nav>
 	</div>
@@ -29,11 +29,20 @@
 						<label for="password">Password:</label>
 						<input id="password" class="login-input" type="password">
 					</div>
+					<div class="form-input" id="container_email" style="display: none">
+						<label for="email">Email:</label>
+						<input id="email" class="login-input" type="email">
+					</div>
+					<div class="form-input" id="container_name" style="display: none">
+						<label for="name">name:</label>
+						<input id="name" class="login-input" type="text">
+					</div>
 				</div>
 			</div>
 			<div class="login-footer">
 				<a href="#" class="important less" id="create_user">Create Login</a>
 				<a href="#" class="important" id="login">Login</a>
+				<a href="#" class="important" id="submit" style="display: none">Submit</a>
 			</div>
 		</div>
 	</div>
