--- a/public/html/home.html
+++ b/public/html/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="css/c_home.css" />
+        <link rel="stylesheet" type="text/css" href="css/home.css" />
     </head>
     <body>
         <div class="header">
@@ -12,24 +12,28 @@
                     <img src="asset/logo.png" class="logo-img">
                 </div>
                 <div class="links-container">
-                    <a href="./html/c_home.html" class="nav-link">Home</a>
+                    <a href="/home" class="nav-link">Home</a>
                     <div class='link-border'>&nbsp;</div>
-                    <a href="./html/about.html" class="nav-link">About</a>
+                    <a href="/about" class="nav-link">About</a>
                     <div class='link-border'>&nbsp;</div>
-                    <a href="./html/store_search.html" class="nav-link">Stores</a>
+                    <a href="/stores" class="nav-link">Stores</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/profile" class="nav-link">Profile</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="#" id="logout_btn" class="nav-link">Log out</a>
                 </div>
             </nav>
         </div>
 
         <div class="content">
             <div class="home_box">
-                A
+                <a href="/Transactions" class="nav-link-box">Transaction History</a>
             </div>
             <div class="home_box">
-                B
+                <a href="/stock" class="nav-link-box">Item Catalog</a>
             </div>
             <div class="home_box">
-                C
+                <a href="/comments" class="nav-link-box">Comment</a>
             </div>
         </div>
 
@@ -40,5 +44,6 @@
                 </div>
             </nav>
         </div>
+        <script type="text/javascript" src="js/general.js"></script>
     </body>
 </html>
