--- a/public/html/stores.html
+++ b/public/html/stores.html
@@ -1,9 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <title>Home</title>
+        <link rel="stylesheet" type="text/css" href="css/stores.css" />
     </head>
     <body>
+        <!-- <% if(user_type !== "customer") { %> 
+            <div class="header" style="background-color: #7465A0">
+        <% } else { %> -->
+            <div class="header">
+        <!--<% } %>-->
+            <nav>
+                <div class="logo-container">
+                    <img src="asset/logo.png" class="logo-img">
+                </div>
+                <div class="links-container">
+                    <a href="/home" class="nav-link">Home</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/about" class="nav-link">About</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/stores" class="nav-link">Stores</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/profile" class="nav-link">Profile</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="#" id="logout_btn" class="nav-link">Log out</a>
+                </div>
+            </nav>
+        </div>
 
+        <div class="content">
+            <div class="table-desc">
+                <h4>Store Search</h4>
+            </div>
+            <table>
+                <tr>
+                    <th>Store #</th>
+                    <th>Store Name</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Rating</th>
+                    <th></th> <!--Add in extra stuff written on white board-->
+                </tr>
+            
+                <tr>
+
+                </tr>
+                <tr>
+
+                </tr>
+                <tr>
+
+                </tr>                
+            </table>
+        </div>
+
+        <div class="footer">
+            <nav>
+                <div class="logo-container">
+                    <img src="asset/logo.png" class="logo-img">
+                </div>
+            </nav>
+        </div>
+        <script type="text/javascript" src="js/general.js"></script>
     </body>
 </html>
