--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="css/stores.css" />
+        <link rel="stylesheet" type="text/css" href="css/profile.css" />
     </head>
     <body>
         <!-- <% if(user_type !== "customer") { %> 
@@ -36,17 +36,17 @@
             <table>
                 <tr>
                     <th>First Name</th>
-                    <td> </td>
-                    <td><button class="editbtn">Edit</button></td>
+                    <td><form><input type="text" name="firstname" value=""></form></td>
+                    <td><a href="#" class="editbtn">Edit</a></td>
                 </tr>
                 <tr>
                     <th>Last Name</th>
-                    <td> </td>
-                    <td><button class="editbtn">Edit</button></td>
+                    <td><form><input type="text" name="lastname" value=""></form></td>
+                    <td><a href="#" class="editbtn">Edit</a></td>
                 </tr>
                 <tr>
                     <th>CustID</th> <!--Customers only-->
-                    <td> </td> <!--Not editable-->
+                    <td></td> <!--Not editable-->
                 </tr>
                 <tr>
                     <th>EmpID</th> <!--Employees & Managers only-->
@@ -54,8 +54,8 @@
                 </tr>   
                 <tr>
                     <th>Email</th> <!--Customers only-->
-                    <td> </td>
-                    <td><button class="editbtn">Edit</button></td>
+                    <td><form><input type="text" name="lastname" value=""></form></td>
+                    <td><a href="" class="editbtn">Edit</a></td>
                 </tr>   
                 <tr>
                     <th>Position</th> <!--Employees and Managers only-->
