--- a/public/html/stores.html
+++ b/public/html/stores.html
@@ -40,9 +40,9 @@
                     <th>City</th>
                     <th>State</th>
                     <th>Rating</th>
-                    <th></th> <!--Add in extra stuff written on white board-->
+                    <th>Year Founded</th>
                 </tr>
-            
+                    
                 <tr>
 
                 </tr>
