profile name fix

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>Profile</title>
         <link rel="stylesheet" type="text/css" href="css/profile.css" />
     </head>
     <body>
@@ -35,13 +35,8 @@
             </div>
             <table>
                 <tr>
-                    <th>First Name</th>
-                    <td><form><input type="text" name="firstname" value=""></form></td>
-                    <td><a href="#" class="editbtn">Edit</a></td>
-                </tr>
-                <tr>
-                    <th>Last Name</th>
-                    <td><form><input type="text" name="lastname" value=""></form></td>
+                    <th>Name</th>
+                    <td><form><input type="text" name="name" value=""></form></td>
                     <td><a href="#" class="editbtn">Edit</a></td>
                 </tr>
                 <tr>
@@ -54,7 +49,7 @@
                 </tr>   
                 <tr>
                     <th>Email</th> <!--Customers only-->
-                    <td><form><input type="text" name="lastname" value=""></form></td>
+                    <td><form><input type="text" name="email" value=""></form></td>
                     <td><a href="" class="editbtn">Edit</a></td>
                 </tr>   
                 <tr>
