--- a/public/html/stores.html
+++ b/public/html/stores.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>Store Search</title>
         <link rel="stylesheet" type="text/css" href="css/stores.css" />
     </head>
     <body>
@@ -33,6 +33,12 @@
             <div class="table-desc">
                 <h4>Store Search</h4>
             </div>
+            <div class="search-desc">
+                <form>
+                    <input type="text" name="store_state" value="Search by State">
+                    <input type="text" name="store_name" value="Search by Store Name">
+                </form>
+            </div>
             <table>
                 <tr>
                     <th>Store #</th>
@@ -42,7 +48,7 @@
                     <th>Rating</th>
                     <th>Year Founded</th>
                 </tr>
-                    
+
                 <tr>
 
                 </tr>
