fixed transaction.css and finished store

--- a/public/html/stores.html
+++ b/public/html/stores.html
@@ -35,9 +35,10 @@
             </div>
             <div class="search-desc">
                 <form>
-                    <input type="text" name="store_state" value="Search by State">
-                    <input type="text" name="store_name" value="Search by Store Name">
+                    <input type="text" name="store_state" value="" placeholder="Search by State">
+                    <input type="text" name="store_name" value="" placeholder="Search by Store Name">
                 </form>
+                <br>
             </div>
             <table>
                 <tr>
@@ -48,15 +49,14 @@
                     <th>Rating</th>
                     <th>Year Founded</th>
                 </tr>
-
                 <tr>
-
+                    <td>Row2</td>
                 </tr>
                 <tr>
-
+                    <td>Row3</td>
                 </tr>
                 <tr>
-
+                    <td>Row4</td>
                 </tr>                
             </table>
         </div>
