store button fix (ignore logo change)

--- a/public/html/stores.html
+++ b/public/html/stores.html
@@ -35,8 +35,10 @@
             </div>
             <div class="search-desc">
                 <form>
+                    <a href="" class="editbtn">Clear</a>
                     <input type="text" name="store_state" value="" placeholder="Search by State">
                     <input type="text" name="store_name" value="" placeholder="Search by Store Name">
+                    <a href="" class="editbtn">Search</a>
                 </form>
                 <br>
             </div>
