--- a/public/html/stock.html
+++ b/public/html/stock.html
@@ -1,9 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <title>Item Catalog</title>
+        <link rel="stylesheet" type="text/css" href="css/stock.css" />
     </head>
     <body>
+        <!-- <% if(user_type !== "customer") { %> 
+            <div class="header" style="background-color: #7465A0">
+        <% } else { %> -->
+            <div class="header">
+        <!--<% } %>-->
+            <nav>
+                <div class="logo-container">
+                    <img src="asset/logo.png" class="logo-img">
+                </div>
+                <div class="links-container">
+                    <a href="/home" class="nav-link">Home</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/about" class="nav-link">About</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/stores" class="nav-link">Stores</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/profile" class="nav-link">Profile</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="#" id="logout_btn" class="nav-link">Log out</a>
+                </div>
+            </nav>
+        </div>
 
+        <div class="content">
+            <div class="table-desc">
+                <h4>Item Catalog</h4>
+            </div>
+            <div class="search-desc">
+                <form>
+                    <input type="text" name="item_dept" value="" placeholder="Search by Department">
+                    <input type="text" name="item_brand" value="" placeholder="Search by Brand">
+                    <input type="text" name="item_size" value="" placeholder="Search by Size">
+                </form>
+                <br>
+            </div>
+            <table>
+                <form>
+                <tr>
+                    <th>UPC</th>
+                    <th>Size</th>
+                    <th>Color</th>
+                    <th>Department</th>
+                    <th>Description</th>
+                    <th>Brand</th>
+                    <th>Price</th>
+                </tr>
+                <tr>
+                    
+                </tr>
+                <tr>
+                    <td>Row3</td>
+                </tr>
+                <tr>
+                    <td>Row4</td>
+                </tr>                
+            </table>
+        </div>
+
+        <div class="footer">
+            <nav>
+                <div class="logo-container">
+                    <img src="asset/logo.png" class="logo-img">
+                </div>
+            </nav>
+        </div>
+        <script type="text/javascript" src="js/general.js"></script>
     </body>
 </html>
