--- a/public/html/stores.html
+++ b/public/html/stores.html
@@ -35,9 +35,9 @@
             </div>
             <div class="search-desc">
                 <form>
-                    <a href="" class="editbtn">Clear</a>
                     <input type="text" name="store_state" value="" placeholder="Search by State">
                     <input type="text" name="store_name" value="" placeholder="Search by Store Name">
+                    <a href="" class="editbtn clear">Clear</a>
                     <a href="" class="editbtn">Search</a>
                 </form>
                 <br>
