I did it, be proud - stock done

--- a/public/html/stock.html
+++ b/public/html/stock.html
@@ -35,9 +35,12 @@
             </div>
             <div class="search-desc">
                 <form>
-                    <input type="text" name="item_dept" value="" placeholder="Search by Department">
-                    <input type="text" name="item_brand" value="" placeholder="Search by Brand">
-                    <input type="text" name="item_size" value="" placeholder="Search by Size">
+                    <input class="search-bars" name="item_dept" value="" placeholder="Search by Department">
+                    <input class="search-bars" name="item_brand" value="" placeholder="Search by Brand">
+                    <input class="search-bars" name="item_size" value="" placeholder="Search by Size">
+                    <a href="" class="editbtn clear">Clear</a>
+                    <a href="" class="editbtn">Search</a>
+                    <a href="" class="editbtn save">Save</a>
                 </form>
                 <br>
             </div>
@@ -53,14 +56,15 @@
                     <th>Price</th>
                 </tr>
                 <tr>
-                    
+                    <td> </td> <!--UPC-->
+                    <td><input type="text" name="input_size" value=""></td>
+                    <td><input type="text" name="input_color" value=""></td>
+                    <td> </td> <!--Department-->
+                    <td><input type="text" name="input_desc" value="Desc Test"></td>
+                    <td><input type="text" name="input_brand" value="Brand Test"></td>
+                    <td><input type="text" name="input_price" value=""></td>
                 </tr>
-                <tr>
-                    <td>Row3</td>
-                </tr>
-                <tr>
-                    <td>Row4</td>
-                </tr>                
+                </form>            
             </table>
         </div>
 
