--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <title>About</title>
+        <link rel="stylesheet" type="text/css" href="css/about.css" />
     </head>
     <body>
+        <!--<% if(user_type !== "customer") { %>
+            <div class="header" style="background-color: #7465A0">
+        <% } else { %> -->
+            <div class="header">
+        <!--<% } %> -->
+            <nav>
+                <div class="logo-container">
+                    <img src="asset/logo.png" class="logo-img">
+                </div>
+                <div class="links-container">
+                    <a href="/home" class="nav-link">Home</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/about" class="nav-link">About</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/stores" class="nav-link">Stores</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="/profile" class="nav-link">Profile</a>
+                    <div class='link-border'>&nbsp;</div>
+                    <a href="#" id="logout_btn" class="nav-link">Log out</a>
+                </div>
+            </nav>
+        </div>
 
+        <div class="content">
+            <div class="desc">
+                <h4>About Simba's Department Store</h4>
+            </div>
+            <div class="para">
+                <img class="main_img" src="asset/simba.png" alt="Simba Image">
+                <div class="main_text">
+                        <p class="main_p">Simba's Department Store was founded March 7th, 2016, as this is the day Simba was born. 
+                            Ever since that day, we strive to deliver high quality customer service that matches the excellent 
+                            quality items we sell. In addition we found our policies on integrity and honest value, thank you for 
+                            shopping at Simba's Department Store.
+                        </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <nav>
+                <div class="logo-container">
+                    <img src="asset/logo.png" class="logo-img">
+                </div>
+            </nav>
+        </div>
+        <script type="text/javascript" src="js/general.js"></script>
     </body>
 </html>
